--- a/immoswiss/DESCRIPTION
+++ b/immoswiss/DESCRIPTION
@@ -1,11 +1,22 @@
 Package: immoswiss
 Type: Package
-Title: What the Package Does (Title Case)
+Title: Property Price Estimation
 Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+Authors: Meriem Ben Mustapha, Arnaud Bertrand, Alexandre Gautschi, Fabien Calderini, Lawrence Jesudasan
+Maintainer: The package maintainer <lawrence.jesudasan@unil.ch>
+Description: immoswiss is designed for estimating property prices in Lausanne using a Multiple Linear Regression model and K-Nearest Neighbors to find the most similar properties on the market. Additionally, the package allows users to visualize the effect of each criterion on the estimated price.
+License: MIT + LICENSE file
 Encoding: UTF-8
 LazyData: true
+RoxygenNote: 7.2.1
+URL: https://github.com/ptds2023/Project-Group-B
+BugReports: https://github.com/ptds2023/Project-Group-B/issues
+Depends: R (>= 4.2.0)
+Imports:
+    purrr (>= 1.0.2)
+Suggests:
+    rmarkdown,
+    knitr,
+    testthat (>= 3.1.8)
+VignetteBuilder: knitr
+Config/testthat/edition: 3
