--- a/immoswiss/DESCRIPTION
+++ b/immoswiss/DESCRIPTION
@@ -13,7 +13,7 @@ URL: https://github.com/ptds2023/Project-Group-B
 BugReports: https://github.com/ptds2023/Project-Group-B/issues
 Depends: R (>= 4.2.0)
 Imports:
-    purrr (>= 1.0.2)
+    stats
 Suggests:
     rmarkdown,
     knitr,
