Update description file

--- a/immoswiss/DESCRIPTION
+++ b/immoswiss/DESCRIPTION
@@ -13,7 +13,8 @@ URL: https://github.com/ptds2023/Project-Group-B
 BugReports: https://github.com/ptds2023/Project-Group-B/issues
 Depends: R (>= 4.2.0)
 Imports:
-    stats
+    stats,
+    shiny
 Suggests:
     rmarkdown,
     knitr,
