--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,3 @@
-# Workflow derived from https://github.com/r-lib/actions/tree/v2/examples
-# Need help debugging build failures? Start at https://github.com/r-lib/actions#where-to-find-help
 on:
   push:
     branches: [main, master]
@@ -32,6 +30,7 @@ jobs:
         uses: actions/checkout@v2
         with:
           submodules: 'recursive'  # Ensure submodules are checked out
+          path: 'ptds2023/Project-Group-B/immoswiss'  # Specify the correct subdirectory path
 
       - uses: r-lib/actions/setup-pandoc@v2
 
