--- a/immoswiss/DESCRIPTION
+++ b/immoswiss/DESCRIPTION
@@ -19,5 +19,5 @@ Suggests:
     rmarkdown,
     knitr,
     testthat (>= 3.1.8)
-VignetteBuilder: knitr
+VignetteBuilder: rmarkdown
 Config/testthat/edition: 3
